--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   http: ^0.13.6 
   flutter_secure_storage: ^8.0.0 
   dio: ^5.0.0
-  intl: ^0.17.0 
+  intl: ^0.17.0
+  image_picker: ^0.8.4+4 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
